<resources>
    <string name="app_name">Data Validation</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="signin">SIGNIN</string>
    <string name="signup">SIGNUP</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_password_signup">Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="signupSignUp">SIGNUP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="home">HOME</string>
</resources>