<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/firstName_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:layout_marginTop="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
    android:id="@+id/lastName_et"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_last_name"
    android:inputType="textPersonName"
    android:layout_marginTop="8sp"
    android:layout_marginStart="8sp"
    android:layout_marginEnd="8sp"
    app:layout_constraintTop_toBottomOf="@id/firstName_et"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

    <EditText
        android:id="@+id/mobile_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/enter_mobile_number"
        android:layout_marginTop="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/lastName_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <EditText
        android:id="@+id/emailSignUp_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/mobile_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <EditText
        android:id="@+id/passwordSignup_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_signup"
        android:inputType="textPassword"
        android:layout_marginTop="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/emailSignUp_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/signupSignUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupSignUp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        app:layout_goneMarginTop="8sp"
        app:layout_goneMarginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/passwordSignup_et"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>