<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/passwordSignIn_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_marginTop="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/username_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/signIn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:layout_marginEnd="8sp"
        android:layout_marginTop="8sp"
        app:layout_constraintTop_toBottomOf="@id/passwordSignIn_et"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintEnd_toStartOf="@id/signIn_button"
        app:layout_constraintTop_toBottomOf="@id/passwordSignIn_et"
        />
</androidx.constraintlayout.widget.ConstraintLayout>